# 3DGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glm.h  labirinto.c  labirinto.h  main.c  main_3dgame.c  main_3dgame.h
data/: Textura.ppm  chao.ppm  tanque_guerra.ppm  textura-2.ppm  textura-3.ppm  ucrania1.ppm  ucrania2.ppm
